day 22: add server for communications with clients